--- a/apuntes/fisica2/electrostatica/resumen.html
+++ b/apuntes/fisica2/electrostatica/resumen.html
@@ -21,7 +21,27 @@ ul.task-list li input[type="checkbox"] {
   margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */ 
   vertical-align: middle;
 }
-</style>
+/* CSS for citations */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+  margin-bottom: 0em;
+}
+.hanging-indent div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}</style>
 
 
 <script src="resumen_files/libs/clipboard/clipboard.min.js"></script>
@@ -36,6 +56,49 @@ ul.task-list li input[type="checkbox"] {
 <link href="resumen_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="resumen_files/libs/bootstrap/bootstrap-549b3c94feec2c9551db38add473e088.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 
+  <script>window.backupDefine = window.define; window.define = undefined;</script><script src="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.js"></script>
+  <script>document.addEventListener("DOMContentLoaded", function () {
+ var mathElements = document.getElementsByClassName("math");
+ var macros = [];
+ for (var i = 0; i < mathElements.length; i++) {
+  var texText = mathElements[i].firstChild;
+  if (mathElements[i].tagName == "SPAN") {
+   katex.render(texText.data, mathElements[i], {
+    displayMode: mathElements[i].classList.contains('display'),
+    throwOnError: false,
+    macros: macros,
+    fleqn: false
+   });
+}}});
+  </script>
+  <script>window.define = window.backupDefine; window.backupDefine = undefined;</script><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css">
+
+<script type="text/javascript">
+const typesetMath = (el) => {
+  if (window.MathJax) {
+    // MathJax Typeset
+    window.MathJax.typeset([el]);
+  } else if (window.katex) {
+    // KaTeX Render
+    var mathElements = el.getElementsByClassName("math");
+    var macros = [];
+    for (var i = 0; i < mathElements.length; i++) {
+      var texText = mathElements[i].firstChild;
+      if (mathElements[i].tagName == "SPAN") {
+        window.katex.render(texText.data, mathElements[i], {
+          displayMode: mathElements[i].classList.contains('display'),
+          throwOnError: false,
+          macros: macros,
+          fleqn: false
+        });
+      }
+    }
+  }
+}
+window.Quarto = {
+  typesetMath
+};
+</script>
 
 </head>
 
@@ -47,7 +110,17 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Tabla de contenidos</h2>
    
   <ul>
-  <li><a href="#introducción" id="toc-introducción" class="nav-link active" data-scroll-target="#introducción">Introducción</a></li>
+  <li><a href="#antes-de-empezar" id="toc-antes-de-empezar" class="nav-link active" data-scroll-target="#antes-de-empezar">Antes de empezar</a></li>
+  <li><a href="#introducción" id="toc-introducción" class="nav-link" data-scroll-target="#introducción">Introducción</a></li>
+  <li><a href="#ley-de-coulomb" id="toc-ley-de-coulomb" class="nav-link" data-scroll-target="#ley-de-coulomb">Ley de Coulomb</a>
+  <ul class="collapse">
+  <li><a href="#carga-eléctrica-y-estructura-de-la-materia" id="toc-carga-eléctrica-y-estructura-de-la-materia" class="nav-link" data-scroll-target="#carga-eléctrica-y-estructura-de-la-materia">Carga eléctrica y estructura de la materia</a></li>
+  <li><a href="#propiedades-de-la-carga-eléctrica" id="toc-propiedades-de-la-carga-eléctrica" class="nav-link" data-scroll-target="#propiedades-de-la-carga-eléctrica">Propiedades de la carga eléctrica</a></li>
+  <li><a href="#conductores-aislantes-y-cargas-inducidas" id="toc-conductores-aislantes-y-cargas-inducidas" class="nav-link" data-scroll-target="#conductores-aislantes-y-cargas-inducidas">Conductores, aislantes y cargas inducidas</a>
+  <ul class="collapse">
+  <li><a href="#carga-por-inducción" id="toc-carga-por-inducción" class="nav-link" data-scroll-target="#carga-por-inducción">Carga por inducción</a></li>
+  </ul></li>
+  </ul></li>
   </ul>
 </nav>
 </div>
@@ -104,7 +177,7 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 <p><strong>Profesor:</strong> Santiago Agustín Ibáñez</p>
-<p><strong>Ayudante:</strong> Leandro algo</p>
+<p><strong>Ayudante:</strong> Leandro Milton Guzzardo</p>
 <div style="margin-top: 10rem;">
 
 </div>
@@ -113,12 +186,133 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Número de legajo:</strong> 415753</p>
 </div>
 <hr>
+<section id="antes-de-empezar" class="level1">
+<h1>Antes de empezar</h1>
+<p>Primero que nada, quiero avisar que es muy recomendable haber leído el resumen de Análisis Matemático 2 antes de leer este. La razón es que en esta materia vamos a trabajar con campos vectoriales, y vamos a tener que hacer integrales dobles y triples, usar coordenadas cilíndricas, calcular gradientes, etc., y todo eso se vé en AMII.</p>
+<p>Segundo, antes de empezar con el resumen, me parece importante dar una pequeña introducción sobre lo que vamos a estar viendo este año en Física 2, ya que es bastante distinto de Física 1.</p>
+<p>En Física 1 empezamos estudiando cinemática del punto material, en donde aprendimos cómo se mueven los objetos en el espacio. Después pasamos a estudiar la dinámica del punto material, donde aprendimos por qué se movían los objetos y conocimos las tres leyes de Newton.</p>
+<p>Luego descurbrimos que los objetos “almacenan” energía, y aprendimos a calcular cuánta energía posee un sistema, y cómo su conservación nos permite predecir el comportamiento de los cuerpos.</p>
+<p>Por último, estudiamos la dinámica de los cuerpos rígidos, donde fuimos integrando todos los conocimientos previos para entender el movimiento de objetos mas parecidos a los de la vida real.</p>
+<p>Durante todo este camino, la única fuerza que tuvimos en cuenta era la fuerza gravitatoria, y de ella se desprendían otras fuerzas como el peso, el rozamiento, etc. Pero en la vida real existen otras tres fuerzas mas , además de la gravitatoria, que forman parte de las llamadas <em>cuatro fuerzas fundamentales</em>. Estas son:</p>
+<ul>
+<li>La gravitatoria.</li>
+<li>La electromagnética.</li>
+<li>La nuclear fuerte.</li>
+<li>La nuclear débil.</li>
+</ul>
+<p>En Física 2 vamos a estudiar pura y exclusivamente las <strong>fuerzas electromagnéticas</strong>.</p>
+<p>Las interacciones del <em>electromagnetismo</em> implican partículas que tienen una propiedad llamada <em>carga eléctrica</em>. De la misma manera que en Física 1 vimos que los objetos con masa eran acelerados por las fuerzas gravitatorias, en Fisica 2 vamos a ver que los objetos cargados eléctricamente son acelerados por las fuerzas eléctricas.</p>
+</section>
 <section id="introducción" class="level1">
 <h1>Introducción</h1>
-<p>hola</p>
+<p>Como vimos en Física 1, Isaac Newton fue una figura muy importante para la física clásica moderna. Fue él quien formuló las leyes del movimiento y la gravitación universal, y su modelo se sigue usando hasta el día de hoy. Sin embargo, hay ciertos fenómenos que las leyes de Newton no pueden explicar, así que los científicos de la época se pusieron a pensar qué podría estar pasando. Algunos experimentos conocidos, que hacían quedar mal a las leyes de Newton eran los siguientes:</p>
+<ul>
+<li>Supongamos que tenemos dos bombillas de plástico. En principio si las acercamos no pasa nada, pero si las frotamos contra la piel y volvemos a acercarlas, ahora se repelen.</li>
+<li>Ahora supongamos que tenemos dos varillas de vidrio. Lo mismo, si al principio las acercamos entre sí, no pasa nada. Ni se atraen ni se repelen. Pero si las frotamos con seda y las acercamos una a la otra, estas se repelen.</li>
+<li>Y encima, si ahora agarramos la bombilla de plástico que habíamos frotado contra la piel, y agarramos también la varilla de vidrio que frotamos con seda, al acercarlas se atraen.</li>
+<li>Por último, si agarramos una bola de metal y agarramos la bombilla o el vidrio, no importa cuál, al principio la bola de metal y el objeto se atraen el uno al otro; pero si en un momento se tocan, inmediatamente después se repelen entre sí.</li>
+</ul>
+<p>Y cómo puede ser esto? Que a veces los materiales se repelen, otras se atraen, y otras no pase nada aunque lo único que esté pasando entre ellos es que se toquen entre sí. Bueno esto es lo que viene a explicar la <strong>electrostática</strong>, que es el primer tema que vamos a ver en la materia.</p>
+</section>
+<section id="ley-de-coulomb" class="level1">
+<h1>Ley de Coulomb</h1>
+<p>Todos estos fenómenos que acabamos de ver se pueden explicar con una sola fórmula, conocida como <strong>Ley de Coulomb</strong>. Esta ley establece que hay algunos cuerpos que tienen una propiedad llamada <em>carga eléctrica</em>, denominada generalmente con la letra <span class="math inline">q</span>, y esta carga eléctrica es medida en Coulombs. Además, si tenemos una entidad que tiene una carga eléctrica <span class="math inline">q_{1}</span>, y otra entidad con una carga eléctrica <span class="math inline">q_{2}</span>, ambas ejercen una fuerza sobre la otra, y <strong>la magnitud</strong> de esa fuerza está dada por la siguiente fórmula:</p>
+<p><span id="eq-mod-coulomb"><span class="math display">
+  \left|F\right|=\frac{\left|q_{1}q_{2}\right|}{4\pi\varepsilon_{0}}\frac{1}{r^2}
+\tag{1}</span></span></p>
+<p>,donde <span class="math inline">r</span> es la distancia entre ambas partículas, y <span class="math inline">\varepsilon_{0}</span> es una constante tal que <span class="math inline">\varepsilon_{0}\approx 8.854\times 10^{-12}C^2/N\cdot m^2</span>. Si queremos conocer el vector fuerza, lo único que tenemos que hacer es multiplicar la magnitud por la dirección del vector que va de <span class="math inline">q_{1}</span> a <span class="math inline">q_{2}</span>.</p>
+<p><span id="eq-ley-coulomb"><span class="math display">
+  \vec{F}=\frac{\left|q_{1}q_{2}\right|}{4\pi\varepsilon_{0}}\frac{1}{r^2}\frac{\vec{r}}{\lVert\vec{r}\rVert}=\frac{\left|q_{1}q_{2}\right|}{4\pi\varepsilon_{0}}\frac{\vec{r}}{\lVert\vec{r}\rVert^3}
+\tag{2}</span></span></p>
+<p>La Ley de Coulomb puede aparecer escrita de otra forma en la que se usa una constante <span class="math inline">k=\frac{1}{4\pi\varepsilon_{0}}</span>. Esta forma puede ser útil en algunas ocasiones <span class="math display">
+  \left|F\right|=k\frac{\left|q_{1}q_{2}\right|}{r^2}
+</span> Y en su forma vectorial <span class="math display">
+  \vec{F}=k\frac{\left|q_{1}q_{2}\right|}{r^3}\vec{r}
+</span> El valor de esta constante es <span class="math inline">k\approx 8.987\times 10^9N\cdot m^2/C^2</span></p>
+<section id="carga-eléctrica-y-estructura-de-la-materia" class="level2">
+<h2 class="anchored" data-anchor-id="carga-eléctrica-y-estructura-de-la-materia">Carga eléctrica y estructura de la materia</h2>
+<p>En los ejemplos que dimos al principio, cuando se frotaba la varilla de vidrio contra la seda por ejemplo, no había ningún cambio visible en su apariencia que idicara que algo había cambiado. Para entender esto hay que analizar las propiedades eléctricas de los átomos de esa varilla de vidrio.</p>
+<p>Los átomos están constituidos por tres tipos de particulas: los <strong>electrones</strong>, con carga eléctrica negativa; los <strong>protones</strong>, con carga eléctrica positiva y de igual magnitud que los electrones; y los <strong>neutrones</strong>, sin carga. Los protones y los neutrones están formados por otras entidades llamadas <em>quarks</em>, que tienen cargas de <span class="math inline">\pm\frac{1}{3}</span> y <span class="math inline">\pm\frac{2}{3}</span> de la carga del electrón. Todos los electrones siempre tienen la misma carga eléctrica <span class="math inline">q_{e}=-1.6\times10^{-19}C=-q_{p}</span>.</p>
+<p>Los protones y los neutrones en un átomo forma el <strong>núcleo</strong>. Los electrones rodean al núcleo y se mantienen dentro del átomo debido a las fuerzas eléctricas que ejercen los protones sobre ellos. (Los protones y los neutrones están unidos en el núcleo debido a la fuerza nuclear fuerte, que vence a la repulsión eléctrica entre los protones).</p>
+</section>
+<section id="propiedades-de-la-carga-eléctrica" class="level2">
+<h2 class="anchored" data-anchor-id="propiedades-de-la-carga-eléctrica">Propiedades de la carga eléctrica</h2>
+<p>Del análisis anterior podemos deducir dos prinicpios importantes.</p>
+<ul>
+<li><strong>La carga eléctrica se conserva:</strong> La suma algebráica de todas las cargas eléctricas en cualquier sistema cerrado es constante.</li>
+<li><strong>La carga eléctrica es discreta:</strong> La magnitud de la carga del electrón o del protón es la unidad natural de carga. Todos los sistemas tendrán una carga que se puede expresar como un múltiplo de dicha carga.</li>
+</ul>
+</section>
+<section id="conductores-aislantes-y-cargas-inducidas" class="level2">
+<h2 class="anchored" data-anchor-id="conductores-aislantes-y-cargas-inducidas">Conductores, aislantes y cargas inducidas</h2>
+<p>Algunos materiales permiten que las cargas eléctricas se muevan con facilidad de una región a otra, mientras que otros no lo hacen. Los primeros, reciben el nombre de <strong>conductores</strong> de electricidad. El alambre de cobre es un ejemplo de un conductor. Otros materiales, como una banda de caucho y un cordón de nailon no permiten que la carga eléctrica se transfiera, y reciben el nombre de <strong>aislantes</strong>.</p>
+<section id="carga-por-inducción" class="level3">
+<h3 class="anchored">Carga por inducción</h3>
+<p>Si queremos transferir carga eléctrica de un cuerpo <span class="math inline">A</span> hacia otro cuerpo <span class="math inline">B</span>, podemos simplemente acercar <span class="math inline">A</span> hacia <span class="math inline">B</span> para que <span class="math inline">A</span> ceda electrones a <span class="math inline">B</span>, transfiriendole parte de su carga eléctrica. Sin embargo, existe otro proceso mediante el cual podemos cargar al cuerpo <span class="math inline">B</span> sin perder carga del cuerpo <span class="math inline">A</span>. Este proceso se llama <strong>carga por inducción</strong>.</p>
+<p>En la <a href="#fig-carga-induccion" class="quarto-xref">Figura&nbsp;1</a> podemos ver cómo es este proceso. Primero hay una esfera metálica sin carga sostenida por un soporte aislante. Al acercarse una varilla con carga negativa, los electrones libres en la esfera metálica son repelidos por los electrones excedentes en la varilla, de forma que se acumulan en el lado derecho de la esfera. Ahora, como el lado derecho de la esfera tiene una <strong>carga inducida</strong> negativa, al ponerla en contacto con un alambre conductor que está conectado a tierra, los electrones del lado derecho de la esfera son transferidos. De esta manera, la varilla nunca perdió electrones, y logramos transferir parte de la carga eléctrica de la esfera hacia la tierra.</p>
+<div id="fig-carga-induccion" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-carga-induccion-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="./imagenes/carga-induccion.png" class="img-fluid figure-img">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-carga-induccion-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figura&nbsp;1: Imagen sacada de <span class="citation" data-cites="sears2">Young, D., y Freedman (<a href="#ref-sears2" role="doc-biblioref">2009</a>)</span>. Carga por inducción
+</figcaption>
+</figure>
+</div>
+<div class="callout callout-style-default callout-tip no-icon callout-titled" title="🔍">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+🔍
+</div>
+</div>
+<section id="ejemplos" class="level2 callout-body-container callout-body">
+<h2 class="anchored" data-anchor-id="ejemplos">Ejemplos</h2>
+<ol type="1">
+<li>Comparar la magnitud de la fuerza electrostática con la gravitatoria entre:</li>
+</ol>
+<ul>
+<li>2 protones.</li>
+<li>2 electrones.</li>
+<li>2 partículas <span class="math inline">\alpha</span>.</li>
+</ul>
+<p>La magnitud de la fuerza electrostática la vimos aca <a href="#eq-mod-coulomb" class="quarto-xref">Ecuación&nbsp;1</a> y es</p>
+<p><span class="math display">\left|F_{e}\right|=\frac{\left|q_{1}q_{2}\right|}{4\pi\varepsilon_{0}}\frac{1}{r^2}</span></p>
+<p>Por otro lado, la magnitud de la fuerza gravitatoria es</p>
+<p><span class="math display">\left|F_{g}\right|=G\frac{m_{1}m_{2}}{r^2}</span></p>
+<p>Para los protones:</p>
+<p>Habíamos dicho que su carga eléctrica es <span class="math inline">q_{p}=1.6\times 10^{-19}C</span>, por lo que la magnitud de la fuerza entre los protones es <span class="math display">
+\begin{aligned}
+  \left|F_{e}\right|&amp;=\frac{\left(1.6\times 10^{-19}\right)^2}{4\pi\varepsilon_{0}}\frac{1}{r^2}=k\frac{2.5\times 10^{-38}}{r^2}\\
+   &amp;=\frac{2.5\times 10^{-38}\cdot 8.987\times 10^9}{r^2}=\frac{2.246\times 10^{-28}}{r^2}\\
+\end{aligned}
+</span></p>
+<p>La constante de gravitación es <span class="math inline">G=6.674\times 10^{-11}N\cdot m^2/kg^2</span>, y la masa de un protón es <span class="math inline">m_{p}=1.672\times 10^{-27}kg</span>, así que la magnitud de la fuerza gravitatoria entre dos protones es <span class="math display">
+\begin{aligned}
+  \left|F_{g}\right|&amp;=\frac{6.674\times 10^{-11}\cdot \left(1.672\times 10^{-27}\right)^2}{r^2}\\
+   &amp;=\frac{6.674\times 10^{-11}\cdot 2.795\times 10^{-54}}{r^2}\\
+   &amp;=\frac{1.234\times 10^{-64}}{r^2}\\
+\end{aligned}
+</span></p>
+<p>Vemos que la magnitud de la fuerza gravitatoria es MUCHO menor que la de la fuerza eléctrica entre dos protones. Podemos calcular el cociente entre ambas fuerzas para mejor claridad. <span class="math display">
+  \frac{\left|F_{e}\right|}{\left|F_{g}\right|}=\frac{2.246\times 10^{-28}}{1.234\times 10^{-64}}=1.820\times 10^{36}
+</span> Osea que la fuerza eléctrica entre dos protones es aproximadamente <span class="math inline">10^{36}</span> veces mas grande que la gravitatoria. <strong>Es literalmente un trillón de trillones de veces mas fuerte!</strong></p>
+</section>
+</div>
+
+
+</section>
+</section>
 </section>
 
-</main>
+<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">Referencias</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-sears2" class="csl-entry" role="listitem">
+Young, Hugh D., y Roger A. Freedman. 2009. <em>Física universitaria, con física moderna volumen 2.</em> 12.ª ed. Pearson Educación.
+</div>
+</div></section></div></main>
 <!-- /main column -->
 <script id="quarto-html-after-body" type="application/javascript">
   window.document.addEventListener("DOMContentLoaded", function (event) {
